--- a/NLP_on_text.ipynb
+++ b/NLP_on_text.ipynb
@@ -4,14 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color = blue>In this notebook we explore the potential for extracting text from the audio files that can be used to find addresses and other important words and phrases.</font>"
+    "### In this notebook we explore the potential for extracting text from the audio files that can be used to find addresses and other important words and phrases."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color = blue>https://smartystreets.com/products/apis/us-autocomplete-api</font>"
+    "#### A potential API for taking partial address information and cross-referencing it with known addresses\n",
+    "https://smartystreets.com/products/apis/us-autocomplete-api"
    ]
   },
   {
