made updates to README and added an html path id to the EDA_and_modeling notebook

--- a/README_unravelled.ipynb
+++ b/README_unravelled.ipynb
@@ -20,12 +20,14 @@
     "\n",
     "## Problem Statement\n",
     "\n",
-    "*After this lesson, students will be able to:*\n",
     "\n",
-    "1. Identify the Markov property.\n",
-    "2. Describe Monte Carlo simulations.\n",
-    "3. Describe how MCMC works.\n",
-    "4. Identify situations where MCMC is beneficial.\n",
+    "**Problem 10: Using live police radio reports for real time identification of people needing assistance.**\n",
+    "\n",
+    "*Problem Statement:* Currently, FEMA identifies areas that require immediate attention (for search and rescue efforts) either by responding to reports and requests put directly by the public or, recently, using social media posts. This tool will utilize live police radio reports to identify hot spots representing locations of people who need immediate attention. The tool will flag neighborhoods or specific streets where the police and first-respondents were called to provide assistance related to the event.\n",
+    "\n",
+    "#### Questions of Interest to this project\n",
+    "Is it possible to train a model to predict an emergency with a 95% or better accuracy?  \n",
+    "Can any meaningful data related to addresses be gotten from live audio feed?\n",
     "\n",
     "---\n",
     "\n",
@@ -49,17 +51,52 @@
     "\n",
     "## Executive Summary\n",
     "\n",
+    "“To know even one life has breathed easier because you have lived. This is to have succeeded.” – Ralph Waldo Emerson\n",
+    "\n",
+    "\"Prepared. Responsive. Committed.\" - FEMA Motto\n",
+    "\n",
+    "*The executive summary needs to be persuasive and highlight the benefits of your company/product/service, rather than being descriptive and focusing on the features. You can save the features for the body of the proposal.*\n",
+    "\n",
+    "*The Opener: Capture their attention*\n",
+    "\n",
+    "August 29, 2005, Hurrican Katrina slams into the shores of the United States, leaving a wake of devastation.  To compound the issue, poorly constructed levees along the shores of Louisiana give way to rising water, and entire sections of the city of New Orleans are left under water.  Sadly, as rain falls and water levels rise, hundreds of people loose there lives.  \n",
+    "\n",
+    "During this tragic event, emergency responders were left with the task of attending to would be victims, while simultaneously struggling to find those who needed assistance.  Project Red Siren successfully lays the foundation needed to expand the resources available to FEMA when attempting to find people needing immediate assistance.  It specifically addresses the question, is this radio chatter from first responders and dispatchers an emergency?  While this question is not deep enough on its own to answer the full problem statement, the model produced is quite accurate, making it a solid starting point for further investigations.\n",
+    "\n",
+    "To be precise, the model uses various properties of sound waves to isolate tones, inflections, and other parts of speech that become more pronounced when people are put under stress or duress.  Yes, they are emergency responders and dispatchers, trained to keep their composure in tough situations.  This fact is one of the most remarkable things about the model Project Red Siren has produced.  The differences, although subtle, are nevertheless present; and the precision of the computer makes exposing them possible.\n",
+    "\n",
+    "*The Call to Action: Let’s do it*\n",
+    "\n",
+    "*Don't do this*\n",
+    " - Don’t make it too long\n",
+    " - Don’t use jargon\n",
+    " - Don’t use overly technical language\n",
+    " - Don’t talk about your company history\n",
+    " \n",
+    "*Do this*\n",
+    " - Do focus on your client\n",
+    " - Do mention your client’s company name\n",
+    " - Do use plain language\n",
+    " - Do proofread and edit\n",
+    "\n",
+    "\n",
     "---\n",
     "\n",
     "<a id='next-steps'></a>\n",
     "\n",
     "## Future iterations/next steps\n",
     "\n",
+    "During Project Red Siren, several challenges were revealed, which are now considered.  First, and most pronounced, is the fact that the model is not now producing any address information.  There are two big hurdles in this domain, that of the inconsistencies involved with how addresses are communicated, and also the ability to obtain clear enough streaming audio to get meaningful text extraction.  In the former, some work was done.  We refer to the [Proof of concept](https://github.com/project-red-siren-dsi-chi-cc7/deliverables/blob/master/Proof%20of%20concept.ipynb) notebook, which outlines in more detail a potential larger workflow useful in tackling the main problem.  \n",
+    "\n",
+    "A few highlights of the aforementioned proposed workflow.  It incorporates criterion to address the question, how much text data should the machine store when receiving text from live audio?  It also incorporates deep learning into its scope, and briefly mentions the importance of periodic updating of the model to maintain training data on recent new incoming data.\n",
+    "\n",
     "---\n",
     "\n",
     "<a id='known-issues'></a>\n",
     "\n",
     "## Known Issues\n",
+    "\n",
+    "One noteworthly challenge, there are many features which [LibRosa](https://librosa.github.io/librosa/index.html), the primary tool used to create visuals from the sound, can take measurements on and return.  These can get a bit technical.  Please see [EDA_and_modeling](https://github.com/project-red-siren-dsi-chi-cc7/deliverables/blob/master/EDA_and_modeling.ipynb#Audio-features) for a more thorough consideration of the features from LiBrosa.  \n",
     "\n",
     "---\n",
     "\n",
